--- a/css/footer.css
+++ b/css/footer.css
@@ -17,6 +17,14 @@ footer > div {
 	text-transform: capitalize;
 }
 
+@media only screen and (max-width: 768px){
+	/*for mobile*/
+	footer > div{
+		width: 90%;
+		margin: 10px 5%;
+	}
+}
+
 footer h2{
 	margin: 2px 0;
 	font-weight: 500;
