--- a/css/about.css
+++ b/css/about.css
@@ -27,8 +27,9 @@
 }
 .menu ul{
 	list-style-type: none;
+	display: block;
 	margin: 0;
-	padding: 25px 20px;
+	padding: 0 8px;
 	text-align: center;
 	text-transform: capitalize;
 	overflow: auto;
@@ -40,9 +41,7 @@
 	background-color: #224e90;
 	margin: 30px 0;
 	color: white;
-	box-shadow: 10px 10px 5px 0 black;
-	
-	/*add font space */
+	box-shadow: 5px 5px 5px 0 black;
 }
 
 .menu li:hover{
@@ -50,12 +49,14 @@
 	border-left: solid 8px  #263859;
 	background-color: blue;
 	font-weight: 700;
+	letter-spacing: 0.1rem;
 }
 
 .menu li.clicked{
 	border-left: solid 8px  #263859;
 	background-color: blue;
 	font-weight: 700;
+	letter-spacing: 0.1rem;
 }
 
 @media only screen and (max-width: 641px){
@@ -83,15 +84,23 @@
 }
 .content h1{
 	text-transform: capitalize;
-	width: 300px;
+	width: 100%;
 	float: right;
 	padding: 0.6rem;
-	padding-left: 3rem;
+	padding-left: 1rem;
 	color: white;
 	background-color: #263859;
-	box-shadow: 10px 10px 5px 1px #263859;
-	margin-right: 10px;
+	box-shadow: 5px 5px 5px 4px #6f7d97;
+	border-radius: 5px 15px;
 	font-weight: 500;
+}
+
+@media only screen and (min-width: 641px){
+	.content h1{
+		width: 600px;
+		box-shadow: 10px 10px 5px 4px #6f7d97;
+		padding-left: 3rem;
+	}
 }
 iframe{
 	width: 100%;
