--- a/css/menu.css
+++ b/css/menu.css
@@ -42,6 +42,7 @@
 	margin: 30px 0;
 	color: white;
 	box-shadow: 5px 5px 5px 0 black;
+	line-height: 1.4rem;
 }
 
 .menu li:hover{
@@ -72,9 +73,6 @@
 		margin: 1px 0;
 		box-shadow: none;
 	}
-	
-
-
 
 }
 
