--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ body{
 	display: block;
 	margin: 0;
 	padding: 0;
+	font-family: 'Raleway', sans-serif;
 }
 
 @media only screen and (min-width: 641px){
@@ -70,7 +71,110 @@ body{
 }
 
 /*for mobile navbar*/
+@media only screen and (max-width: 641px){
+	.menu-img{
+	    width: 34px;
+    overflow: hidden;
+    height: 34px;
+}
+.menu-img img{
+	    margin: auto;
+    height: 100%;
+}
+.mob.header > *{
+	float: left;
+	text-align: center;
 
+}
+
+.mob.header h1{
+	margin: 0;
+	font-weight: 500;
+	font-size: 1.8rem;
+}
+
+.mob.header{
+	
+	padding: 8px 4px;
+    width: 100%;
+    background-color: #000000;
+    /* opacity: 0.9; */
+    color: white;
+    height: 50px;
+}
+.mob.header::after{
+	content: "";
+	clear: both;
+	display: table;
+}
+
+.active-menu{
+	padding-left: 10px;
+}
+
+nav{
+	background-color: black;
+    padding: 1px;
+    width: 75%;
+    position: absolute;
+    left: 0;
+    top: 50px;
+    margin-left: -75%;
+    height: 100vh;
+    padding-bottom: 50px;
+    overflow: auto;
+    text-transform: capitalize;
+}
+
+nav a{
+	color: white;
+	text-decoration: none;
+}
+
+nav ul{
+	margin: 0;
+	padding: 0;
+	/*overflow: scroll;*/
+	list-style-type: none;
+}
+
+nav ul li{
+	padding: 1rem 0 1rem 0;
+}
+
+nav > ul > li > a{
+	padding-left: 1rem;
+}
+
+nav ul li.active{
+	background-color: green;
+	border: none!important;
+}
+
+nav ul li:hover{
+	border: solid 1px blue; 
+}
+
+nav ul li.expanded ul{
+	padding-top: 1rem;
+	display: block;
+}
+nav ul li.expanded{
+	padding-bottom: 0;
+}
+
+nav ul li ul{
+	display: none;
+}
+
+nav ul li ul li{
+	padding-left: 2rem;
+}
+
+nav ul li ul li:hover{
+	background-color: blue;
+}
+}
 /*end mobile navbar */
 
 @media only screen and (min-width: 641px){
