--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body{
 	margin: 0;
 	padding: 0;
 	font-family: 'Raleway', sans-serif;
+	background-color: #dfdfdf;
 }
 
 @media only screen and (min-width: 641px){
